<resources>
    <string name="app_name">CVClient</string>
    <string name="main_menu_title">Client CV</string>
    <string name="access_to_cv_list">Accèder à la liste des CV</string>
    <string name="access_cv_by_id">Accèder à un CV par son ID</string>
    <string name="add_a_new_cv">Ajouter un nouveau CV</string>
    <string name="title_activity_display_cvs">DisplayCVs</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cv_id_header">Identifiant</string>
    <string name="cv_name_header">Nom</string>
    <string name="cv_first_name_header">Prénom</string>
    
    <string-array name="cv_gender">
        <item>MR</item>
        <item>MRS</item>
    </string-array>
    <string name="title_activity_form_cv">FormCVActivity</string>
    <string name="form_add_cv_title">Ajout d\'un CV</string>
    <string name="form_cv_info_perso_title">Informations Personnelles</string>
    <string name="form_cv_name">Nom :</string>
    <string name="form_cv_name_hint">Nom</string>
    <string name="form_cv_first_name_title">Prénom :</string>
    <string name="form_cv_first_name_hint">Prénom</string>
    <string name="txt_maiden_name_title">Nom de jeune fille ?</string>
    <string name="txt_objective_hint">Objectif</string>
    <string name="txt_skills_hint">Compétences</string>
    <string name="btn_add_new_exp">Ajouter une nouvelle expérience</string>
    <string name="btn_submit_cv">Envoyer le CV</string>
    <string name="btn_add_new_school">Ajouter une nouvelle école</string>
    <string name="btn_add_new_lang">Ajouter une nouvelle Langue</string>
    <string name="btn_add_new_css">Ajouter une nouvelle compétence Informatique</string>
    <string name="txt_exp_title">Experience Professionelle</string>
    <string name="txt_school_title">Etudes</string>
    <string name="txt_lang_title">Langues Parlées</string>
    <string name="txt_css_title">Compétences Informatiques</string>
    <string name="str_begin_date">Date de Début</string>
    <string name="str_end_date">Date de Fin</string>
    <string name="next">Suivant</string>
    <string name="add_new_exp">Ajouter une Expérience</string>
</resources>
