<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center_horizontal|center_vertical"
        android:textAllCaps="true"
        android:layout_weight="1"
        android:text="@string/main_menu_title"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Button
        android:layout_weight="1"
        android:text="@string/access_to_cv_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:onClick="displayListCV"/>

    <Button
        android:layout_weight="1"
        android:text="@string/add_a_new_cv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:onClick="addNewCV"/>



</LinearLayout>